# Google-Dino-GBA

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  dino.elf  dino.gba
include/: dino.h  dinoSheet.h  dinoSheetHelper.h  game.h  graphics.h  hitbox.h  horizon.h  input.h  maro.h  meter.h  obstacle.h  save.h  state.h
include/graphics/: dinoSheetHelper.h  graphics.h  graphicsContext.h
licenses/: chromium_os.txt
readme/: README.md
source/: dino.c  dinoSheet.c  dinoSheetHelper.c  game.c  graphics.c  hitbox.c  horizon.c  input.c  maro.c  meter.c  obstacle.c  save.c  template.c
source/graphics/: dinoSheetHelper.c  graphics.c
